# arm-hackathon

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
belimo_reference/: README.md
belimo_reference/belimo_extract/: __init__.py  bridge.py  faults.py  health.py  impact.py  models.py  pipeline.py  utils.py
docs/: simulation-rules.md
icarus/: __init__.py
icarus/agent/: __init__.py  health.py
icarus/scenarios/: __init__.py  degradation.py
icarus/simulation/: __init__.py  models.py  plant.py
src/icarus/: __init__.py  __main__.py  config.py  plant.py  scenario.py  trace.py
tests/: test_config.py  test_health.py  test_plant.py  test_scenarios.py  test_simulation.py  test_trace.py  test_visualise.py
traces/: nominal.jsonl  primary_fan_degradation.jsonl
