[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "icarus-habitat"
version = "0.1.0"
description = "Closed-loop fault response for a simulated habitat ventilation system"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
